[package]
name = "tycho-crypto"
description = "Cryptography primitives for Tycho node"
repository = "https://github.com/broxus/tycho-crypto"
version = "0.4.0"
edition = "2024"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT OR Apache-2.0"

[dependencies]
curve25519-dalek = "4.1.3"
generic-array = { version = "0.14", features = ["more_lengths"] }
hex = "0.4.3"
rand8 = { package = "rand", version = "0.8", optional = true }
rand9 = { package = "rand", version = "0.9", optional = true }
sha2 = "0.10"
tl-proto = { version = "0.5.0", features = ["derive"], optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
tycho-crypto = { path = "./", features = ["rand9"] }

[features]
default = ["tl-proto"]
serde = ["dep:serde"]
rand8 = ["dep:rand8"]
rand9 = ["dep:rand9"]
